--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   },
   "dependencies": {
     "@radix-ui/react-alert-dialog": "^1.1.11",
+    "@radix-ui/react-collapsible": "^1.1.8",
     "@radix-ui/react-dialog": "^1.1.11",
+    "@radix-ui/react-label": "^2.1.4",
+    "@radix-ui/react-navigation-menu": "^1.2.10",
     "@radix-ui/react-popover": "^1.1.11",
     "@radix-ui/react-select": "^2.2.2",
     "@radix-ui/react-slot": "^1.2.0",
@@ -20,9 +23,11 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "framer-motion": "^12.9.4",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.503.0",
     "moment": "^2.30.1",
+    "moment-timezone": "^0.5.48",
     "next": "15.3.1",
     "prettier-plugin-tailwindcss": "^0.6.11",
     "react": "^19.0.0",
